--- a/index.html
+++ b/index.html
@@ -10,8 +10,61 @@ body,h1,h2,h3,h4,h5 {font-family: "Poppins", sans-serif}
 body {font-size:16px;}
 .w3-half img{margin-bottom:-6px;margin-top:16px;opacity:0.8;cursor:pointer}
 .w3-half img:hover{opacity:1}
+
+
+
+
+.header {
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
+}
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: #E03617;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
+
+
+
+
+
 </style>
 <body background="pattern.jpg">
+<div class="header">
+  <a href="#default" class="logo">The CongiBank</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
+</div>
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-red w3-collapse w3-top w3-large w3-padding" style="z-index:3;width:300px;font-weight:bold;" id="mySidebar"><br>
@@ -45,7 +98,7 @@ body {font-size:16px;}
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-  <div class="w3-container" style="margin-top:80px b" id="showcase"  >
+  <div class="w3-container" style="margin-top:80px  width:80% b" id="showcase"  >
     <h1 class="w3-jumbo"><b>The CogniBank</b></h1>
     <h1 class="w3-xxxlarge w3-text-red"><b>Welcome!</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
@@ -67,31 +120,31 @@ and invisible, that customers have more time to spend on the people or things th
      <div class="w3-row-padding w3-grayscale">
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="banking.jpg" alt="John" style="width:95%">
+        <img src="banking.jpg" alt="banking" style="width:95%">
         <div class="w3-container">
           <h3>Banking</h3>
-          <p class="w3-opacity"><br></p>
+          <p class="w3-opacity"></p>
           <p>Banking as it is never before</p>
         </div>
       </div>
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="transaction.jpeg" alt="Jane" style="width:100%">
+        <img src="transaction.jpeg" alt="transaction" style="width:100%">
         <div class="w3-container">
-          <h3>Jane Doe</h3>
-          <p class="w3-opacity">Designer</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <h3>Transaction</h3>
+          <p class="w3-opacity"></p>
+          <p>Smart and secured transaction</p>
         </div>
       </div>
     </div>
     <div class="w3-col m4 w3-margin-bottom">
       <div class="w3-light-grey">
-        <img src="loan.jpg" alt="Mike" style="width:100%">
+        <img src="loan.jpg" alt="loan" style="width:100%">
         <div class="w3-container">
-          <h3>Mike Ross</h3>
-          <p class="w3-opacity">Architect</p>
-          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <h3>Loans</h3>
+          <p class="w3-opacity"></p>
+          <p>A friend you can trust</p>
         </div>
       </div>
     </div>
@@ -107,7 +160,7 @@ and invisible, that customers have more time to spend on the people or things th
 </div>
 
 <!-- W3.CSS Container -->
-<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-opacity">w3.css</a></p></div>
+<div class="w3-light-grey w3-container w3-padding-32" style="margin-top:75px;padding-right:58px"><p class="w3-right">all rights reserved <a href="" title="W3.CSS" target="_blank" class="w3-hover-opacity">&copy CogniBank</a></p></div>
 
 <script>
 // Script to open and close sidebar
@@ -127,6 +180,15 @@ function onClick(element) {
   document.getElementById("modal01").style.display = "block";
   var captionText = document.getElementById("caption");
   captionText.innerHTML = element.alt;
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+  document.getElementById("main").style.marginLeft = "250px";
+}
+
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+  document.getElementById("main").style.marginLeft= "0";
+}
 }
 </script>
 
