--- a/login.html
+++ b/login.html
@@ -124,7 +124,7 @@ img.two {
   </div>
   <div class="w3-bar-block">
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Register</a> 
+    <a href="register.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Register</a> 
 
     <a href="login.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Login</a> 
     <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Transaction</a> 
