--- a/register.html
+++ b/register.html
@@ -54,6 +54,56 @@ body {font-size:16px;}
 
 
 
+input[type=text], input[type=password] {
+  width: 75%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 25%;
+}
+
+button:hover {
+  opacity: 0.8;
+}
+
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+}
+
+.imgcontainer {
+  text-align: center;
+  margin: 24px 0 12px 0;
+}
+
+
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+img.two {
+  height: 10%;
+  width: 10%;
+}
+
+
 
 </style>
 <body background="pattern.jpg">
@@ -74,7 +124,7 @@ body {font-size:16px;}
   </div>
   <div class="w3-bar-block">
     <a href="index.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-    <a href="register.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Register</a> 
+    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Register</a> 
 
     <a href="login.html" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Login</a> 
     <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Transaction</a> 
@@ -100,58 +150,140 @@ body {font-size:16px;}
   <!-- Header -->
   <div class="w3-container" style="margin-top:80px  width:80% b" id="showcase"  >
     <h1 class="w3-jumbo"><b>The CogniBank</b></h1>
-    <h1 class="w3-xxxlarge w3-text-red"><b>Welcome!</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
-<p style="background-color:#FBF9F8">The CogniBank, a leading financial services group headquartered in India, operates across 18 Countries.  
-A frontrunner in digital transformation, we seek to deliver a new kind of banking that is so simple, secured 
-and invisible, that customers have more time to spend on the people or things they care about.
- We invite you to be part of the journey to Live more, Bank less.</p>
-  </div>
-  
-  <!-- Photo grid (modal) -->
-  
+	<form action="/action_page.php">
+  <form method="" action="">
+ 
+<table  align="left" width="800" bgcolor="white" >
+ 
+<caption><h3>Registration form</h3></caption>
+ 
+<tr>
+ 
+<th>first name</th>
+ 
+<td><input type="text" name="fn" id="fn1" maxlength="10" title="enter your first name" placeholder="first name" required/ width=75%></td>
+ 
+</tr>
+ 
+<tr>
+ 
+<th>last name</th>
+ 
+<td><input type="text" placeholder="last name"/></td>
+ 
+</tr>
+<br>
+ 
+<tr>
+ 
+<th>Enter your password</th>
+ 
+<td><input type="password"/></td>
+ 
+</tr>
+ 
+<tr>
+ 
+<th>ReEnter your password</th>
+ 
+<td><input type="password"/></td>
+ 
+</tr>
+<tr>
+ 
+<th>Enter Your Aadhar Number</th>
+ 
+<td><input type="text" required/></td>
+ 
+</tr>
+<tr>
+ 
+<th>Enter Your PAN Number</th>
+ 
+<td><input type="text" required/></td>
+ 
+</tr>
+ 
+<tr>
+ 
+<th>Enter your email</th>
+ 
+<td><input type="email"/></td>
+ 
+</tr>
+ 
+<tr>
+ 
+<th>Enter your mobile</th>
+ 
+<td><input type="number"/></td>
+ 
+</tr>
+ 
+<tr>
+ 
+<th>Enter your address</th>
+ 
+<td><textarea rows="8" cols="20"></textarea></td>
+ 
+</tr>
+ 
+<tr>
+ 
+<th>Select your gender</th>
+ 
+<td>
+ 
+male<input type="radio" name="g" value="m"/>
+female<input type="radio" name="g" value="f"/>
+ 
+</td>
+ 
+</tr>
+ 
 
-  <!-- Services -->
-  <div class="w3-container" id="services" style="margin-top:75px">
-    <h1 class="w3-xxxlarge w3-text-red"><b>Services.</b></h1>
-    <hr style="width:50px;border:5px solid red" class="w3-round">
+ 
+<th>Select your DOB</th>
+ 
+<td><input type="date"/></td>
+ 
+</tr>
+ <br>
+<tr>
+ 
+<th>Select your Country</th>
+ 
+<td>
+ 
+<select name="country">
+ 
+<option value="" selected="selected" disabled="disabled">Select your country</option>
+ 
+<option value="1">India</option>
+ 
+<option value="2">Pakistan</option>
+ 
+</select>
+ 
+</td>
+ 
+</tr>
+ <br>
 
-
-     <div class="w3-row-padding w3-grayscale">
-    <div class="w3-col m4 w3-margin-bottom">
-      <div class="w3-light-grey">
-        <img src="banking.jpg" alt="banking" style="width:95%">
-        <div class="w3-container">
-          <h3>Banking</h3>
-          <p class="w3-opacity"></p>
-          <p>Banking as it is never before</p>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col m4 w3-margin-bottom">
-      <div class="w3-light-grey">
-        <img src="transaction.jpeg" alt="transaction" style="width:100%">
-        <div class="w3-container">
-          <h3>Transaction</h3>
-          <p class="w3-opacity"></p>
-          <p>Smart and secured transaction</p>
-        </div>
-      </div>
-    </div>
-    <div class="w3-col m4 w3-margin-bottom">
-      <div class="w3-light-grey">
-        <img src="loan.jpg" alt="loan" style="width:100%">
-        <div class="w3-container">
-          <h3>Loans</h3>
-          <p class="w3-opacity"></p>
-          <p>A friend you can trust</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-
-
+ 
+<td colspan="2" align="center"><input type="submit" value="Save My Data"/>
+ 
+<input type="reset" value="Reset Data"/>
+ 
+</td>
+ 
+</tr>
+ 
+</table>
+ 
+</form>
+</form>
+    
 
   </div>
   
